--- a/src/locales/gl-ES.json
+++ b/src/locales/gl-ES.json
@@ -44,7 +44,7 @@
     "withBackground": "Fondo",
     "exportEmbedScene": "Inserir escena",
     "exportEmbedScene_details": "Os datos da escena serán gardados no ficheiro PNG/SVG exportado polo que a escena poderá ser restaurada dende el. Isto aumentará o tamaño do ficheiro exportado.",
-    "addWatermark": "Engadir \"Feito con Creativedraw\"",
+    "addWatermark": "Engadir \"Feito con Creativeboard\"",
     "handDrawn": "Debuxado a man",
     "normal": "Normal",
     "code": "Código",
@@ -77,7 +77,7 @@
     "untitled": "Sen título",
     "name": "Nome",
     "yourName": "O teu nome",
-    "madeWithExcalidraw": "Feito con Creativedraw",
+    "madeWithExcalidraw": "Feito con Creativeboard",
     "group": "Agrupar selección",
     "ungroup": "Desagrupar selección",
     "collaborators": "Colaboradores",
@@ -105,7 +105,7 @@
     "showBackground": "Mostrar selector de cores do fondo",
     "toggleTheme": "Alternar tema",
     "personalLib": "Biblioteca Persoal",
-    "excalidrawLib": "Biblioteca Creativedraw",
+    "excalidrawLib": "Biblioteca Creativeboard",
     "decreaseFontSize": "Diminuír tamaño da fonte",
     "increaseFontSize": "Aumentar o tamaño da fonte",
     "unbindText": "Desvincular texto",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Non se pode exportar un lenzo baleiro.",
     "couldNotCopyToClipboard": "Non se puido copiar ao portapapeis.",
     "decryptFailed": "Non se poideron descifrar os datos.",
-    "uploadedSecurly": "A carga foi asegurada con cifrado de extremo a extremo, o que significa que o servidor de Creativedraw e terceiros non poden ler o contido.",
+    "uploadedSecurly": "A carga foi asegurada con cifrado de extremo a extremo, o que significa que o servidor de Creativeboard e terceiros non poden ler o contido.",
     "loadSceneOverridePrompt": "A carga dun debuxo externo substituirá o contido existente. Desexa continuar?",
     "collabStopOverridePrompt": "Deter a sesión, sobrescribirá o seu debuxo local previamente almacenado. Está seguro?\n\n(Se quere manter o seu debuxo local, simplemente peche a lapela do navegador.)",
     "errorAddingToLibrary": "Non se puido engadir o elemento á biblioteca",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Isto engadirá {{numShapes}} forma(s) a túa biblioteca. Estás seguro?",
     "imageDoesNotContainScene": "Esta imaxe non parece conter ningún dato da escena. Activou a inserción de escenas durante a exportación?",
     "cannotRestoreFromImage": "Non se puido restaurar a escena dende este arquivo de imaxe",
-    "invalidSceneUrl": "Non se puido importar a escena dende a URL proporcionada. Ou ben está malformada ou non contén un JSON con información válida para Creativedraw.",
+    "invalidSceneUrl": "Non se puido importar a escena dende a URL proporcionada. Ou ben está malformada ou non contén un JSON con información válida para Creativeboard.",
     "resetLibrary": "Isto limpará a súa biblioteca. Está seguro?",
     "removeItemsFromsLibrary": "Eliminar {{count}} elemento(s) da biblioteca?",
     "invalidEncryptionKey": "A clave de cifrado debe ter 22 caracteres. A colaboración en directo está desactivada.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "A sesión de colaboración en directo está agora en progreso.",
     "desc_shareLink": "Comparte esta ligazón con calquera que queiras colaborar:",
     "desc_exitSession": "Deter a sesión desconectarao da sala, pero poderá seguir traballando coa escena de maneira local. Teña en conta que isto non afectará a outras persoas, que poderán seguir colaborando na súa versión.",
-    "shareTitle": "Únase a unha sesión de colaboración en directo en Creativedraw"
+    "shareTitle": "Únase a unha sesión de colaboración en directo en Creativeboard"
   },
   "errorDialog": {
     "title": "Erro"
@@ -288,9 +288,9 @@
     "link_title": "Ligazón para compartir",
     "link_details": "Exportar como unha ligazón de só lectura.",
     "link_button": "Exportar a unha ligazón",
-    "excalidrawplus_description": "Garde a escena no seu espazo de traballo en Creativedraw+.",
+    "excalidrawplus_description": "Garde a escena no seu espazo de traballo en Creativeboard+.",
     "excalidrawplus_button": "Exportar",
-    "excalidrawplus_exportError": "Non se puido exportar a Creativedraw+ neste momento..."
+    "excalidrawplus_exportError": "Non se puido exportar a Creativeboard+ neste momento..."
   },
   "helpDialog": {
     "blog": "Le o noso blog",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Eliminar os elementos seleccionados da biblioteca"
   },
   "encrypted": {
-    "tooltip": "Os teus debuxos están cifrados de punto a punto, polo que os servidores de Creativedraw nunca os verán.",
-    "link": "Entrada do blog acerca do cifrado de punto a punto en Creativedraw"
+    "tooltip": "Os teus debuxos están cifrados de punto a punto, polo que os servidores de Creativeboard nunca os verán.",
+    "link": "Entrada do blog acerca do cifrado de punto a punto en Creativeboard"
   },
   "stats": {
     "angle": "Ángulo",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Toda a información é gardada de maneira local no seu navegador.",
-      "center_heading_plus": "Queres ir a Creativedraw+ no seu lugar?",
+      "center_heading_plus": "Queres ir a Creativeboard+ no seu lugar?",
       "menuHint": "Exportar, preferencias, idiomas, ..."
     },
     "defaults": {
