--- a/src/locales/ku-TR.json
+++ b/src/locales/ku-TR.json
@@ -44,7 +44,7 @@
     "withBackground": "باکگراوند",
     "exportEmbedScene": "ئیمبێدکردنی دیمەنەکە",
     "exportEmbedScene_details": "هەنداردەکراو بۆ ئەوەی دیمەنەکە بتوانرێت بگەڕێنرێتەوە لێی (PNG/SVG) داتای دیمەنەکە هەڵدەگیرێت وەکو فایلی\nقەبارەی فایلە هەناردەکراوەکان زیاد دەکات.",
-    "addWatermark": "زیادبکە \"Made with Creativedraw\"",
+    "addWatermark": "زیادبکە \"Made with Creativeboard\"",
     "handDrawn": "دەست کێشراو",
     "normal": "ئاسایی",
     "code": "کۆد",
@@ -77,7 +77,7 @@
     "untitled": "Untitled",
     "name": "ناو",
     "yourName": "ناوەکەت",
-    "madeWithExcalidraw": "Made with Creativedraw",
+    "madeWithExcalidraw": "Made with Creativeboard",
     "group": "دیاریکردنی گروپ",
     "ungroup": "گروپی دیاریکراوەکان لابەرە",
     "collaborators": "هاوکارەکان",
@@ -105,7 +105,7 @@
     "showBackground": "ڕەنگهەڵگری باکگراوند نیشانبدە",
     "toggleTheme": "دۆخی ڕوکار بگۆڕە",
     "personalLib": "کتێبخانەی کەسی",
-    "excalidrawLib": "کتێبخانەی Creativedraw",
+    "excalidrawLib": "کتێبخانەی Creativeboard",
     "decreaseFontSize": "کەمکردنەوەی قەبارەی فۆنت",
     "increaseFontSize": "زایدکردنی قەبارەی فۆنت",
     "unbindText": "دەقەکە جیابکەرەوە",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "ناتوانرێت تابلۆی بەتاڵ هەناردەبکرێت.",
     "couldNotCopyToClipboard": "ناتوانرا لەبەربگیرێتەوە بۆ تەختەنوس",
     "decryptFailed": "ناتوانرا داتاکان شیبکرێتەوە",
-    "uploadedSecurly": "بارکردنەکە بە کۆدکردنی کۆتایی بۆ کۆتایی پارێزراوە، ئەمەش واتە سێرڤەری Creativedraw و لایەنی سێیەم ناتوانن ناوەڕۆکەکە بخوێننەوە.",
+    "uploadedSecurly": "بارکردنەکە بە کۆدکردنی کۆتایی بۆ کۆتایی پارێزراوە، ئەمەش واتە سێرڤەری Creativeboard و لایەنی سێیەم ناتوانن ناوەڕۆکەکە بخوێننەوە.",
     "loadSceneOverridePrompt": "بارکردنی وێنەکێشانی دەرەکی جێگەی ناوەڕۆکی بەردەستت دەگرێتەوە. دەتەوێت بەردەوام بیت؟",
     "collabStopOverridePrompt": "وەستاندنی دانیشتنەکە وێنەکێشانی پێشووت دەنووسێتەوە کە لە ناوخۆدا هەڵگیراوە. ئایا دڵنیایت?\n\n(ئەگەر دەتەوێت وێنەکێشانی ناوخۆیی خۆت بهێڵیتەوە، لەبری ئەوە تەنها تابی وێبگەڕەکە دابخە).",
     "errorAddingToLibrary": "نەیتوانی بڕگە زیاد بکات بۆ کتێبخانە",
@@ -288,7 +288,7 @@
     "link_title": "بەستەری هاوبەشیپێکردن",
     "link_details": "ناردن وەک بەستەری تەنها-خوێندنەوە.",
     "link_button": "هەناردەکردن بۆ بەستەر",
-    "excalidrawplus_description": "دیمەنەکە لە شوێنی کارکردنی Creativedraw+ هەڵبگرە.",
+    "excalidrawplus_description": "دیمەنەکە لە شوێنی کارکردنی Creativeboard+ هەڵبگرە.",
     "excalidrawplus_button": "هەناردەکردن",
     "excalidrawplus_exportError": "لەم ساتەدا نەتوانرا هەناردە بکرێت بۆ Excalidrow+..."
   },
