--- a/src/locales/lt-LT.json
+++ b/src/locales/lt-LT.json
@@ -44,7 +44,7 @@
     "withBackground": "Fonas",
     "exportEmbedScene": "Įterpti sceną",
     "exportEmbedScene_details": "Scenos duomenys bus išsaugoti eksportuotame PNG/SVG faile taip, jog vėliau scena galėtu būti iš jo atkurta.\nTai padydins eksportuoto failo dydį.",
-    "addWatermark": "Sukurta su Creativedraw",
+    "addWatermark": "Sukurta su Creativeboard",
     "handDrawn": "Ranka rašytas",
     "normal": "Normalus",
     "code": "Kodas",
@@ -77,7 +77,7 @@
     "untitled": "",
     "name": "",
     "yourName": "Jūsų vardas",
-    "madeWithExcalidraw": "Sukurta su Creativedraw",
+    "madeWithExcalidraw": "Sukurta su Creativeboard",
     "group": "Grupuoti pasirinkimą",
     "ungroup": "Išgrupuoti pasirinkimą",
     "collaborators": "Bendradarbiautojai",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Tai įtrauks {{numShapes}} figūrą/-as į tavo biblioteką. Ar tikrai to nori?",
     "imageDoesNotContainScene": "Panašu, jog šis paveiksliukas neturi scenos duomenų. Ar yra įjuntas scenos įtraukimas ekportavimo metu?",
     "cannotRestoreFromImage": "Nepavyko atstatyti scenos iš šio nuotraukos failo",
-    "invalidSceneUrl": "Nepavyko suimportuoti scenos iš pateiktos nuorodos (URL). Ji arba blogai suformatuota, arba savyje neturi teisingų Creativedraw JSON duomenų.",
+    "invalidSceneUrl": "Nepavyko suimportuoti scenos iš pateiktos nuorodos (URL). Ji arba blogai suformatuota, arba savyje neturi teisingų Creativeboard JSON duomenų.",
     "resetLibrary": "Tai išvalys tavo biblioteką. Ar tikrai to nori?",
     "removeItemsFromsLibrary": "Ištrinti {{count}} elementą/-us iš bibliotekos?",
     "invalidEncryptionKey": "Šifravimo raktas turi būti iš 22 simbolių. Redagavimas gyvai yra išjungtas.",
