--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -44,7 +44,7 @@
     "withBackground": "含有背景",
     "exportEmbedScene": "嵌入場景",
     "exportEmbedScene_details": "用於回復場景的場景資料會被包含在輸出的 PNG/SVG 檔案中。\n會增加輸出的檔案大小。",
-    "addWatermark": "加上 \"Made with Creativedraw\" 浮水印",
+    "addWatermark": "加上 \"Made with Creativeboard\" 浮水印",
     "handDrawn": "手寫",
     "normal": "一般",
     "code": "代碼",
@@ -77,7 +77,7 @@
     "untitled": "無標題",
     "name": "名稱",
     "yourName": "你的名稱",
-    "madeWithExcalidraw": "以 Creativedraw 製作",
+    "madeWithExcalidraw": "以 Creativeboard 製作",
     "group": "建立群組",
     "ungroup": "取消群組",
     "collaborators": "協作者",
@@ -105,7 +105,7 @@
     "showBackground": "顯示背景檢色器",
     "toggleTheme": "切換主題",
     "personalLib": "個人資料庫",
-    "excalidrawLib": "Creativedraw 資料庫",
+    "excalidrawLib": "Creativeboard 資料庫",
     "decreaseFontSize": "縮小文字",
     "increaseFontSize": "放大文字",
     "unbindText": "取消綁定文字",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "無法輸出空白的 canvas。",
     "couldNotCopyToClipboard": "無法複製到剪貼簿",
     "decryptFailed": "無法解密資料。",
-    "uploadedSecurly": "上傳已通過 end-to-end 加密，Creativedraw 伺服器和第三方無法皆讀取其內容。",
+    "uploadedSecurly": "上傳已通過 end-to-end 加密，Creativeboard 伺服器和第三方無法皆讀取其內容。",
     "loadSceneOverridePrompt": "讀取外部圖樣將取代目前的內容。是否要繼續？",
     "collabStopOverridePrompt": "停止連線將覆蓋您先前於本機儲存的繪圖進度，是否確認？\n\n（如要保留原有的本機繪圖進度，直接關閉瀏覽器分頁即可。）",
     "errorAddingToLibrary": "無法於此資料庫加入項目",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "這將會將 {{numShapes}} 個圖形加入你的資料庫，你確定嗎？",
     "imageDoesNotContainScene": "此圖檔中未包含場景資料。輸出檔案時是否有包含場景資料？",
     "cannotRestoreFromImage": "無法由此檔案回復場景。",
-    "invalidSceneUrl": "無法由提供的 URL 匯入場景。可能是發生異常，或未包含有效的 Creativedraw JSON 資料。",
+    "invalidSceneUrl": "無法由提供的 URL 匯入場景。可能是發生異常，或未包含有效的 Creativeboard JSON 資料。",
     "resetLibrary": "這會清除您的資料庫，是否確定？",
     "removeItemsFromsLibrary": "從資料庫刪除 {{count}} 項？",
     "invalidEncryptionKey": "加密鍵必須為22字元。即時協作已停用。",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "即時協作連線正在進行中。",
     "desc_shareLink": "將此連結分享給欲協作的對象：",
     "desc_exitSession": "停止連線將中斷你與協作會議室的連結，但你仍可於本機編輯此作品。意指停止連線後你的編輯不會被先前共同協作的人看見，且他們可繼續共同協作另一個版本。",
-    "shareTitle": "加入 Creativedraw 上的即時協作會議室"
+    "shareTitle": "加入 Creativeboard 上的即時協作會議室"
   },
   "errorDialog": {
     "title": "錯誤"
@@ -288,9 +288,9 @@
     "link_title": "可共享連結",
     "link_details": "匯出為唯讀連結",
     "link_button": "匯出為連結",
-    "excalidrawplus_description": "將此場景儲存至你的 Creativedraw+ 工作區",
+    "excalidrawplus_description": "將此場景儲存至你的 Creativeboard+ 工作區",
     "excalidrawplus_button": "輸出",
-    "excalidrawplus_exportError": "目前無法輸出至 Creativedraw+"
+    "excalidrawplus_exportError": "目前無法輸出至 Creativeboard+"
   },
   "helpDialog": {
     "blog": "閱讀部落格",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "從資料庫移除所選的項目"
   },
   "encrypted": {
-    "tooltip": "你的作品已使用 end-to-end 方式加密，Creativedraw 的伺服器也無法取得其內容。",
-    "link": "Creativedraw 端到端加密的相關部落格文章"
+    "tooltip": "你的作品已使用 end-to-end 方式加密，Creativeboard 的伺服器也無法取得其內容。",
+    "link": "Creativeboard 端到端加密的相關部落格文章"
   },
   "stats": {
     "angle": "角度",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "所有資料皆已在瀏覽器中儲存於本機",
-      "center_heading_plus": "您是否是要前往 Creativedraw+ ？",
+      "center_heading_plus": "您是否是要前往 Creativeboard+ ？",
       "menuHint": "輸出、偏好設定、語言..."
     },
     "defaults": {
