--- a/src/locales/fi-FI.json
+++ b/src/locales/fi-FI.json
@@ -105,7 +105,7 @@
     "showBackground": "Näytä taustavärin valitsin",
     "toggleTheme": "Vaihda teema",
     "personalLib": "Oma kirjasto",
-    "excalidrawLib": "Creativedraw kirjasto",
+    "excalidrawLib": "Creativeboard kirjasto",
     "decreaseFontSize": "Pienennä kirjasinkokoa",
     "increaseFontSize": "Kasvata kirjasinkokoa",
     "unbindText": "Irroita teksti",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Tämä lisää {{numShapes}} muotoa kirjastoosi. Jatketaanko?",
     "imageDoesNotContainScene": "Tämä kuva ei näytä sisältävän piirrostietoja. Oletko ottanut käyttöön piirroksen tallennuksen viennin aikana?",
     "cannotRestoreFromImage": "Teosta ei voitu palauttaa tästä kuvatiedostosta",
-    "invalidSceneUrl": "Teosta ei voitu tuoda annetusta URL-osoitteesta. Tallenne on vioittunut, tai osoitteessa ei ole Creativedraw JSON-dataa.",
+    "invalidSceneUrl": "Teosta ei voitu tuoda annetusta URL-osoitteesta. Tallenne on vioittunut, tai osoitteessa ei ole Creativeboard JSON-dataa.",
     "resetLibrary": "Tämä tyhjentää kirjastosi. Jatketaanko?",
     "removeItemsFromsLibrary": "Poista {{count}} kohdetta kirjastosta?",
     "invalidEncryptionKey": "Salausavaimen on oltava 22 merkkiä pitkä. Live-yhteistyö ei ole käytössä.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Jaettu istunto on nyt käynnissä.",
     "desc_shareLink": "Jaa tämä linkki kenelle tahansa, jonka kanssa haluat tehdä yhteistyötä:",
     "desc_exitSession": "Istunnon pysäyttäminen katkaisee yhteyden huoneeseen, mutta voit vielä jatkaa työskentelyä paikallisesti. Huomaa, että tämä ei vaikuta muihin käyttäjiin ja he voivat jatkaa oman versionsa parissa työskentelyä.",
-    "shareTitle": "Liity Creativedraw live-yhteistyöistuntoon"
+    "shareTitle": "Liity Creativeboard live-yhteistyöistuntoon"
   },
   "errorDialog": {
     "title": "Virhe"
@@ -288,9 +288,9 @@
     "link_title": "Jaettava linkki",
     "link_details": "Vie vain luku -linkkinä.",
     "link_button": "Vie linkkinä",
-    "excalidrawplus_description": "Tallenna teos Creativedraw+ tilaan.",
+    "excalidrawplus_description": "Tallenna teos Creativeboard+ tilaan.",
     "excalidrawplus_button": "Vie",
-    "excalidrawplus_exportError": "Ei voitu viedä Creativedraw+-palveluun tällä hetkellä..."
+    "excalidrawplus_exportError": "Ei voitu viedä Creativeboard+-palveluun tällä hetkellä..."
   },
   "helpDialog": {
     "blog": "Lue blogiamme",
@@ -374,7 +374,7 @@
   },
   "encrypted": {
     "tooltip": "Piirroksesi ovat päästä-päähän-salattuja, joten Excalidrawin palvelimet eivät koskaan näe niitä.",
-    "link": "Blogiartikkeli päästä päähän -salauksesta Creativedraw:ssa"
+    "link": "Blogiartikkeli päästä päähän -salauksesta Creativeboard:ssa"
   },
   "stats": {
     "angle": "Kulma",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Kaikki tietosi on tallennettu paikallisesti selaimellesi.",
-      "center_heading_plus": "Haluatko sen sijaan mennä Creativedraw+:aan?",
+      "center_heading_plus": "Haluatko sen sijaan mennä Creativeboard+:aan?",
       "menuHint": "Vie, asetukset, kielet, ..."
     },
     "defaults": {
