--- a/src/locales/nl-NL.json
+++ b/src/locales/nl-NL.json
@@ -44,7 +44,7 @@
     "withBackground": "Achtergrond",
     "exportEmbedScene": "Scène insluiten",
     "exportEmbedScene_details": "Scènegegevens worden in het geëxporteerde PNG/SVG-bestand opgeslagen zodat de scène kan worden hersteld.\nDe grootte van de geëxporteerde bestanden zal toenemen.",
-    "addWatermark": "Voeg \"Gemaakt met Creativedraw\" toe",
+    "addWatermark": "Voeg \"Gemaakt met Creativeboard\" toe",
     "handDrawn": "Handgetekend",
     "normal": "Normaal",
     "code": "Code",
@@ -77,7 +77,7 @@
     "untitled": "Naamloos",
     "name": "Naam",
     "yourName": "Jouw naam",
-    "madeWithExcalidraw": "Gemaakt met Creativedraw",
+    "madeWithExcalidraw": "Gemaakt met Creativeboard",
     "group": "Groeperen",
     "ungroup": "Groep opheffen",
     "collaborators": "Deelnemers",
@@ -105,7 +105,7 @@
     "showBackground": "Toon achtergrondkleur kiezer",
     "toggleTheme": "Thema aan/uit",
     "personalLib": "Persoonlijke bibliotheek",
-    "excalidrawLib": "Creativedraw bibliotheek",
+    "excalidrawLib": "Creativeboard bibliotheek",
     "decreaseFontSize": "Letters verkleinen",
     "increaseFontSize": "Letters vergroten",
     "unbindText": "Ontkoppel tekst",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Kan geen leeg canvas exporteren.",
     "couldNotCopyToClipboard": "Kon niet naar klembord kopiëren.",
     "decryptFailed": "Kan gegevens niet decoderen.",
-    "uploadedSecurly": "De upload is beveiligd met end-to-end encryptie, wat betekent dat de Creativedraw server en derden de inhoud niet kunnen lezen.",
+    "uploadedSecurly": "De upload is beveiligd met end-to-end encryptie, wat betekent dat de Creativeboard server en derden de inhoud niet kunnen lezen.",
     "loadSceneOverridePrompt": "Het inladen van een externe tekening zal je bestaande inhoud vervangen. Wil je verdergaan?",
     "collabStopOverridePrompt": "Wanneer de sessie wordt gestopt, overschrijft u de eerdere, lokaal opgeslagen tekening. Weet je het zeker?\n\n(Als je de lokale tekening wilt behouden, sluit je in plaats daarvan het browsertabblad)",
     "errorAddingToLibrary": "Kan item niet toevoegen aan de bibliotheek",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Dit zal {{numShapes}} vorm(en) toevoegen aan je bibliotheek. Weet je het zeker?",
     "imageDoesNotContainScene": "Deze afbeelding lijkt geen scène gegevens te bevatten. Heb je scène embedding tijdens het exporteren ingeschakeld?",
     "cannotRestoreFromImage": "Scène kan niet worden hersteld vanuit dit afbeeldingsbestand",
-    "invalidSceneUrl": "Kan scène niet importeren vanuit de opgegeven URL. Het is onjuist of bevat geen geldige Creativedraw JSON-gegevens.",
+    "invalidSceneUrl": "Kan scène niet importeren vanuit de opgegeven URL. Het is onjuist of bevat geen geldige Creativeboard JSON-gegevens.",
     "resetLibrary": "Dit zal je bibliotheek wissen. Weet je het zeker?",
     "removeItemsFromsLibrary": "Verwijder {{count}} item(s) uit bibliotheek?",
     "invalidEncryptionKey": "Encryptiesleutel moet 22 tekens zijn. Live samenwerking is uitgeschakeld.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "De live-samenwerkingssessie is nu gestart.",
     "desc_shareLink": "Deel deze link met iedereen waarmee je wil samenwerken:",
     "desc_exitSession": "Het stoppen van de sessie zal je loskoppelen van de kamer, maar je kunt lokaal doorwerken met de scène.\nPas op: dit heeft geen invloed op andere mensen en dat zij nog steeds in staat zullen zijn om samen te werken aan hun versie.",
-    "shareTitle": "Neem deel aan een live samenwerkingssessie op Creativedraw"
+    "shareTitle": "Neem deel aan een live samenwerkingssessie op Creativeboard"
   },
   "errorDialog": {
     "title": "Fout"
@@ -288,9 +288,9 @@
     "link_title": "Deelbare link",
     "link_details": "Exporteren als een alleen-lezen link.",
     "link_button": "Exporteer naar link",
-    "excalidrawplus_description": "Sla de scène op in je Creativedraw+ werkruimte.",
+    "excalidrawplus_description": "Sla de scène op in je Creativeboard+ werkruimte.",
     "excalidrawplus_button": "Exporteer",
-    "excalidrawplus_exportError": "Kan op dit moment niet exporteren naar Creativedraw+..."
+    "excalidrawplus_exportError": "Kan op dit moment niet exporteren naar Creativeboard+..."
   },
   "helpDialog": {
     "blog": "Lees onze blog",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": ""
   },
   "encrypted": {
-    "tooltip": "Je tekeningen zijn beveiligd met end-to-end encryptie, dus Creativedraw's servers zullen nooit zien wat je tekent.",
-    "link": "Blog post over end-to-end versleuteling in Creativedraw"
+    "tooltip": "Je tekeningen zijn beveiligd met end-to-end encryptie, dus Creativeboard's servers zullen nooit zien wat je tekent.",
+    "link": "Blog post over end-to-end versleuteling in Creativeboard"
   },
   "stats": {
     "angle": "Hoek",
