--- a/src/locales/sv-SE.json
+++ b/src/locales/sv-SE.json
@@ -44,7 +44,7 @@
     "withBackground": "Bakgrund",
     "exportEmbedScene": "Bädda in skiss",
     "exportEmbedScene_details": "Skissdata kommer att sparas i den exporterade PNG/SVG-filen så att skissen kan återställas från den.\nKommer att öka exporterad filstorlek.",
-    "addWatermark": "Lägg till \"Skapad med Creativedraw\"",
+    "addWatermark": "Lägg till \"Skapad med Creativeboard\"",
     "handDrawn": "Handritad",
     "normal": "Normal",
     "code": "Kod",
@@ -77,7 +77,7 @@
     "untitled": "Namnlös",
     "name": "Namn",
     "yourName": "Ditt namn",
-    "madeWithExcalidraw": "Skapad med Creativedraw",
+    "madeWithExcalidraw": "Skapad med Creativeboard",
     "group": "Gruppera markering",
     "ungroup": "Avgruppera markering",
     "collaborators": "Medarbetare",
@@ -105,7 +105,7 @@
     "showBackground": "Visa färgväljare för bakgrundsfärg",
     "toggleTheme": "Växla tema",
     "personalLib": "Personligt bibliotek",
-    "excalidrawLib": "Creativedraw bibliotek",
+    "excalidrawLib": "Creativeboard bibliotek",
     "decreaseFontSize": "Minska fontstorleken",
     "increaseFontSize": "Öka fontstorleken",
     "unbindText": "Koppla bort text",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Kan inte exportera tom canvas.",
     "couldNotCopyToClipboard": "Kunde inte kopiera till urklipp.",
     "decryptFailed": "Kunde inte avkryptera data.",
-    "uploadedSecurly": "Uppladdning har säkrats med kryptering från ände till ände. vilket innebär att Creativedraw server och tredje part inte kan läsa innehållet.",
+    "uploadedSecurly": "Uppladdning har säkrats med kryptering från ände till ände. vilket innebär att Creativeboard server och tredje part inte kan läsa innehållet.",
     "loadSceneOverridePrompt": "Laddning av extern skiss kommer att ersätta ditt befintliga innehåll. Vill du fortsätta?",
     "collabStopOverridePrompt": "Att stoppa sessionen kommer att skriva över din föregående, lokalt lagrade skiss. Är du säker?\n\n(Om du vill behålla din lokala skiss, stäng bara webbläsarfliken istället.)",
     "errorAddingToLibrary": "Kunde inte lägga till objekt i biblioteket",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Detta kommer att lägga till {{numShapes}} form(er) till ditt bibliotek. Är du säker?",
     "imageDoesNotContainScene": "Den här bilden verkar inte innehålla någon skissdata. Har du aktiverat inbäddning av skiss under export?",
     "cannotRestoreFromImage": "Skiss kunde inte återställas från denna bildfil",
-    "invalidSceneUrl": "Det gick inte att importera skiss från den angivna webbadressen. Antingen har den fel format, eller så innehåller den ingen giltig Creativedraw JSON data.",
+    "invalidSceneUrl": "Det gick inte att importera skiss från den angivna webbadressen. Antingen har den fel format, eller så innehåller den ingen giltig Creativeboard JSON data.",
     "resetLibrary": "Detta kommer att rensa ditt bibliotek. Är du säker?",
     "removeItemsFromsLibrary": "Ta bort {{count}} objekt från biblioteket?",
     "invalidEncryptionKey": "Krypteringsnyckeln måste vara 22 tecken. Livesamarbetet är inaktiverat.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Nu pågår en live-samarbetssession.",
     "desc_shareLink": "Dela denna länk med någon du vill samarbeta med:",
     "desc_exitSession": "Att avbryta sessionen kommer att koppla bort dig från rummet, men du kommer att kunna fortsätta arbeta med skissen, lokalt. Observera att detta inte påverkar andra människor, och de kommer fortfarande att kunna samarbeta på deras version.",
-    "shareTitle": "Delta i en live-samarbetssession på Creativedraw"
+    "shareTitle": "Delta i en live-samarbetssession på Creativeboard"
   },
   "errorDialog": {
     "title": "Fel"
@@ -288,9 +288,9 @@
     "link_title": "Delbar länk",
     "link_details": "Exportera som en skrivskyddad länk.",
     "link_button": "Exportera till länk",
-    "excalidrawplus_description": "Spara skissen till din Creativedraw+ arbetsyta.",
+    "excalidrawplus_description": "Spara skissen till din Creativeboard+ arbetsyta.",
     "excalidrawplus_button": "Exportera",
-    "excalidrawplus_exportError": "Det gick inte att exportera till Creativedraw+ just nu..."
+    "excalidrawplus_exportError": "Det gick inte att exportera till Creativeboard+ just nu..."
   },
   "helpDialog": {
     "blog": "Läs vår blogg",
@@ -374,7 +374,7 @@
   },
   "encrypted": {
     "tooltip": "Dina skisser är krypterade från ände till ände så Excalidraws servrar kommer aldrig att se dem.",
-    "link": "Blogginlägg om kryptering från ände till ände i Creativedraw"
+    "link": "Blogginlägg om kryptering från ände till ände i Creativeboard"
   },
   "stats": {
     "angle": "Vinkel",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "All data sparas lokalt i din webbläsare.",
-      "center_heading_plus": "Ville du gå till Creativedraw+ istället?",
+      "center_heading_plus": "Ville du gå till Creativeboard+ istället?",
       "menuHint": "Exportera, inställningar, språk, ..."
     },
     "defaults": {
